--- a/src/static/response/404.html
+++ b/src/static/response/404.html
@@ -13,9 +13,9 @@ body {
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>명언 다이어리 - 404</title>
+    <title>Dear my diary - 404 not found</title>
 </head>
 <body>
-    <p>404 not Found - 페이지 엔드포인트를 찾을 수 없습니다.</p>
+    <p>404 not Found - 페이지를 찾을 수 없습니다.</p>
 </body>
 </html>
