front-page-done

--- a/src/static/html/index.html
+++ b/src/static/html/index.html
@@ -52,7 +52,7 @@
         <!-- 인증된 메인 페이지 -->
         <div id="authed" class="container hidden">
             <header class="main-header">
-                <h1>500억을 내 통장에</h1>
+                <h1>dear my diary</h1>
                 <div class="user-info">
                     <span id="username-display"></span>
                     <button onclick="handleLogout()" class="secondary-btn">로그아웃</button>
